objects/SI_Session__c.object
<CustomObject><fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Duration_Hours__c</fullName>
        <label>Duration (Hours)</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Duration__c</fullName>
        <formula>(EndTime__c - StartTime__c)*24*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>EndTime__c</fullName>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>SessionDate__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Staff__c</fullName>
        <label>Staff</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Supplemental_Instructions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>StartTime__c</fullName>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>true</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Learning Program(Obsolete)</label><nameField>
        <label>SI Session</label>
        <type>Text</type>
    </nameField><pluralLabel>Learning Programs(Obsolete)</pluralLabel><sharingModel>ControlledByParent</sharingModel></CustomObject>